#-----------------------------------------------------------------------------
#
# $Id$
#
#-----------------------------------------------------------------------------

all:
	pdflatex m-etherlab.tex

clean-local:
	rm -f \
		*.aux \
		*.lof \
		*.log \
		*.maf \
		*.mtc \
		*.mtc1 \
		*.out \
		*.pdf \
		*.toc

#-----------------------------------------------------------------------------
